# AutoCryptoClaimer

./: README.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
faucet_collector/: crypto_claimer.py
