[tool.poetry]
name = "autocryptoclaimer"
version = "0.1.0"
description = "Automatically claims crypto on faucet sites"
authors = ["Christian Pérez Villanueva <perez.villanueva.christian34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
APScheduler = "^3.7.0"
msedge-selenium-tools = "^3.141.3"

[tool.poetry.dev-dependencies]
black = "^21.4b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
